--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,7 +8,7 @@ output:
 
 ## Loading and preprocessing the data
 ```{r echo=TRUE}
-setwd("C:\\Users\\brenno.oliveira\\Documents\\GitHub\\RepData_PeerAssessment1")
+setwd("C:\\RepData_PeerAssessment1")
 activity<-read.csv(unz("activity.zip", "activity.csv")) 
 totalSteps<-aggregate(steps~date,data=activity,sum,na.rm=TRUE)
 
@@ -110,9 +110,9 @@ xyplot(steps~interval|factor(day),data=stepsInterval2,aspect=1/2,type="l")
 ## Generate markdown
 
 
-```{r}
+```{r eval=FALSE}
 library(knitr)
 knit(input="PA1_template.Rmd", output="PA1_template.md", encoding="ISO8859-1", quiet=TRUE)
-markdownToHTML(input="PA1_template.md", output="PA1_template.html")
+knit2html("PA1_template.Rmd", "PA1_template.html")
 ```
 
